# Smart-CV-Evaluator

./: LICENSE  README.md
application/: app.py  pyproject.toml  requirements.txt
application/src/: parser.py  prompt_templates.py  rag_pipeline.py
assests/static/: style.css
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: DOCKER_DEPLOYMENT.md  PROJECT_COMPLETION.md  PROJECT_STRUCTURE.md
scripts/: run_app.bat  run_app.sh  run_docker.bat  run_docker.sh
